# rtu_mirea

./: README.md  poetry.sh  product_database.txt  pyproject.toml
big_data/practice1/hdfs_client/: __main__.py  client.py
big_data/practice1/hdfs_client/tests/: client.py  main.py
big_data/scripts/: hiveMeta.sh  hiveStart.sh  install_all.sh  start_all.sh
big_data/scripts/derby/: start.sh
big_data/scripts/hdp/: clean.sh  compile_java.sh  format.sh  restart.sh  stop.sh
big_data/scripts/hive/: exec.sh  metastore.sh  start.sh
big_data/scripts/install/: derby.sh  hadoop.sh  hive.sh  jdk.sh  pig.sh  spark.sh
big_data/scripts/spark/: start-master.sh  start-worker.sh  start.sh  stop.sh  test.sh
big_data/src/hadoop_docker/: deploy.sh  docker-compose.yml
big_data/src/pr1_hdfs_client/: __main__.py
big_data/src/pr1_hdfs_client/tests/: test_client.py
big_data/src/pr2_cross_correlation/: README.md  __main__.py  gen_db.py  product_database.txt  run.sh  run_adviser.sh  run_all.sh
big_data/src/pr2_cross_correlation/adviser/: __main__.py  new.py
big_data/src/pr3_etl/: cp_hdfs.sh  run_hive.sh  run_mapred.sh  run_pig.sh
big_data/src/pr3_map_reduce_etl/: README.md  __main__.py  copy_to_hdfs.sh  docker-compose.yml  exec_hive.sh  exec_hql.sh  hadoop.env  hdfs_copy.sh  run_hive.sh  run_mapred.sh  run_pig.sh
big_data/src/pr5_rdd_sparksql/: preflight.sh
big_data/src/pr5_tweets/: env.py  lecture_graphframes.py  preflight.sh  tweets  tweets_sample-csv_table.htm
data_warehouse/src/: docker-compose.jupyter.yml
data_warehouse/src/pr1_population_algorithm/: README.md  TASK.md
data_warehouse/src/pr2/: __main__.py
data_warehouse/src/pr2_tsp_symmetric/: README.md  TASK.md  __main__.py  q  test.py  visualize.py
data_warehouse/src/pr3_bayes_spam_filter/: docker-compose.yml
data_warehouse/src/pr3_logistic_regression/: TASK.md  q.md
data_warehouse/src/pr4_bayes_spam_filter/: README.md  TASK.md
data_warehouse/src/pr5_semantic_search/: TASK.md
scripts/: hdpClean.sh  hdpStart.sh  hiveMeta.sh  hiveStart.sh
(+87 files in other folders)
