[tool.poetry]
name = "rtu-mirea"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
requests = "^2.31.0"
loguru = "^0.7.2"
mimesis = "^11.1.0"
pyhdfs = "^0.3.1"
faker = "^20.0.0"
pyhive = "^0.7.0"
numpy = "^1.26.2"
pydantic = "^2.5.1"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pytest = "^7.4.3"


[tool.poetry.group.big_data.dependencies]
mrjob = "^0.7.4"


[tool.poetry.group.data_warehouse-dev.dependencies]


[tool.poetry.group.data_warehouse.dependencies]
scikit-learn = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
